// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Block basic usage 1`] = `
<div
  style={
    Object {
      "border": "1px solid red",
    }
  }
>
  <div
    style={
      Object {
        "padding": "15px 0",
      }
    }
  >
    <div
      style={
        Object {
          "boxSizing": "border-box",
          "marginLeft": "auto",
          "marginRight": "auto",
          "maxWidth": "960px",
          "paddingLeft": "15px",
          "paddingRight": "15px",
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "border": "1px solid blue",
          }
        }
      >
        Hello World
      </div>
      <span
        style={
          Object {
            "clear": "both",
            "display": "table",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Block with background color 1`] = `
<div
  style={
    Object {
      "border": "1px solid red",
    }
  }
>
  <div
    style={
      Object {
        "background": "linear-gradient(350deg,  #0d6abe 0%,#a1bee8 50%,#c99eca 100%)",
        "color": "white",
        "padding": "15px 0",
      }
    }
  >
    <div
      style={
        Object {
          "boxSizing": "border-box",
          "marginLeft": "auto",
          "marginRight": "auto",
          "maxWidth": "960px",
          "paddingLeft": "15px",
          "paddingRight": "15px",
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "border": "1px solid blue",
          }
        }
      >
        <p>
          Hello World
        </p>
        <p>
          Hello World
        </p>
        <p>
          Hello World
        </p>
      </div>
      <span
        style={
          Object {
            "clear": "both",
            "display": "table",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
   😀😎👍💯 
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  Hello World
</button>
`;

exports[`Storyshots Headlines basic usage 1`] = `
<div
  style={
    Object {
      "padding": "15px 0",
    }
  }
>
  <div
    style={
      Object {
        "boxSizing": "border-box",
        "marginLeft": "auto",
        "marginRight": "auto",
        "maxWidth": "960px",
        "paddingLeft": "15px",
        "paddingRight": "15px",
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "borderBottom": "1px solid #0d6abe",
          "marginBottom": 10,
        }
      }
    >
      <h1
        style={
          Object {
            "WebkitBackgroundClip": "text",
            "WebkitTextFillColor": "transparent",
            "backgroundImage": "linear-gradient(350deg,  #0d6abe 10%,#c99eca 100%)",
            "fontFamily": "Tahoma, Geneva, sans-serif",
            "fontSize": 36,
            "marginBottom": 5,
          }
        }
      >
        Hello World
      </h1>
    </div>
    <div
      style={
        Object {
          "borderBottom": "1px solid #0d6abe",
          "marginBottom": 10,
        }
      }
    >
      <h2
        style={
          Object {
            "WebkitBackgroundClip": "text",
            "WebkitTextFillColor": "transparent",
            "backgroundImage": "linear-gradient(350deg,  #0d6abe 10%,#c99eca 100%)",
            "fontFamily": "Tahoma, Geneva, sans-serif",
            "fontSize": 28,
            "marginBottom": 5,
          }
        }
      >
        Hello World
      </h2>
    </div>
    <div
      style={
        Object {
          "borderBottom": "1px solid #0d6abe",
          "marginBottom": 10,
        }
      }
    >
      <h3
        style={
          Object {
            "WebkitBackgroundClip": "text",
            "WebkitTextFillColor": "transparent",
            "backgroundImage": "linear-gradient(350deg,  #0d6abe 10%,#c99eca 100%)",
            "fontFamily": "Tahoma, Geneva, sans-serif",
            "fontSize": 22,
            "marginBottom": 5,
          }
        }
      >
        Hello World
      </h3>
    </div>
    <span
      style={
        Object {
          "clear": "both",
          "display": "table",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Headlines inversed style 1`] = `
<div
  style={
    Object {
      "background": "linear-gradient(350deg,  #0d6abe 0%,#a1bee8 50%,#c99eca 100%)",
      "color": "white",
      "padding": "15px 0",
    }
  }
>
  <div
    style={
      Object {
        "boxSizing": "border-box",
        "marginLeft": "auto",
        "marginRight": "auto",
        "maxWidth": "960px",
        "paddingLeft": "15px",
        "paddingRight": "15px",
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "borderBottom": "1px solid white",
          "marginBottom": 10,
        }
      }
    >
      <h1
        style={
          Object {
            "color": "white",
            "fontFamily": "Tahoma, Geneva, sans-serif",
            "fontSize": 36,
            "marginBottom": 5,
            "textShadow": "0px 0px 1px #000",
          }
        }
      >
        Hello World
      </h1>
    </div>
    <div
      style={
        Object {
          "borderBottom": "1px solid white",
          "marginBottom": 10,
        }
      }
    >
      <h2
        style={
          Object {
            "color": "white",
            "fontFamily": "Tahoma, Geneva, sans-serif",
            "fontSize": 28,
            "marginBottom": 5,
            "textShadow": "0px 0px 1px #000",
          }
        }
      >
        Hello World
      </h2>
    </div>
    <div
      style={
        Object {
          "borderBottom": "1px solid white",
          "marginBottom": 10,
        }
      }
    >
      <h3
        style={
          Object {
            "color": "white",
            "fontFamily": "Tahoma, Geneva, sans-serif",
            "fontSize": 22,
            "marginBottom": 5,
            "textShadow": "0px 0px 1px #000",
          }
        }
      >
        Hello World
      </h3>
    </div>
    <p
      style={
        Object {
          "fontFamily": "Tahoma, Geneva, sans-serif",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      some filler text here
    </p>
    <span
      style={
        Object {
          "clear": "both",
          "display": "table",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Headlines part of text article 1`] = `
<div
  style={
    Object {
      "padding": "15px 0",
    }
  }
>
  <div
    style={
      Object {
        "boxSizing": "border-box",
        "marginLeft": "auto",
        "marginRight": "auto",
        "maxWidth": "960px",
        "paddingLeft": "15px",
        "paddingRight": "15px",
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "borderBottom": "1px solid #0d6abe",
          "marginBottom": 10,
        }
      }
    >
      <h1
        style={
          Object {
            "WebkitBackgroundClip": "text",
            "WebkitTextFillColor": "transparent",
            "backgroundImage": "linear-gradient(350deg,  #0d6abe 10%,#c99eca 100%)",
            "fontFamily": "Tahoma, Geneva, sans-serif",
            "fontSize": 36,
            "marginBottom": 5,
          }
        }
      >
        Hello World
      </h1>
    </div>
    <div
      style={
        Object {
          "borderBottom": "1px solid #0d6abe",
          "marginBottom": 10,
        }
      }
    >
      <h2
        style={
          Object {
            "WebkitBackgroundClip": "text",
            "WebkitTextFillColor": "transparent",
            "backgroundImage": "linear-gradient(350deg,  #0d6abe 10%,#c99eca 100%)",
            "fontFamily": "Tahoma, Geneva, sans-serif",
            "fontSize": 28,
            "marginBottom": 5,
          }
        }
      >
        Hello World
      </h2>
    </div>
    <div
      style={
        Object {
          "borderBottom": "1px solid #0d6abe",
          "marginBottom": 10,
        }
      }
    >
      <h3
        style={
          Object {
            "WebkitBackgroundClip": "text",
            "WebkitTextFillColor": "transparent",
            "backgroundImage": "linear-gradient(350deg,  #0d6abe 10%,#c99eca 100%)",
            "fontFamily": "Tahoma, Geneva, sans-serif",
            "fontSize": 22,
            "marginBottom": 5,
          }
        }
      >
        Hello World
      </h3>
    </div>
    <p
      style={
        Object {
          "fontFamily": "Tahoma, Geneva, sans-serif",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      some filler text here
    </p>
    <span
      style={
        Object {
          "clear": "both",
          "display": "table",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Text basic usage 1`] = `
<div
  style={
    Object {
      "padding": "15px 0",
    }
  }
>
  <div
    style={
      Object {
        "boxSizing": "border-box",
        "marginLeft": "auto",
        "marginRight": "auto",
        "maxWidth": "960px",
        "paddingLeft": "15px",
        "paddingRight": "15px",
        "position": "relative",
      }
    }
  >
    <p
      style={
        Object {
          "fontFamily": "Tahoma, Geneva, sans-serif",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec sagittis
           orci, fermentum vestibulum leo. Nulla ut lectus ut quam volutpat laoreet.
           Nulla hendrerit hendrerit libero, id iaculis dui eleifend sed. Nulla
           facilisi. Integer est arcu, molestie sed dui ac, lacinia pulvinar nulla.
           Donec laoreet porta odio. Aliquam dapibus nunc ut dignissim imperdiet.
           Donec quam lacus, vehicula aliquam orci ac, malesuada imperdiet eros.
           Mauris id nisi quis est varius dapibus. Etiam iaculis neque vitae tellus
           tempor, vulputate vehicula elit pulvinar. 
    </p>
    <span
      style={
        Object {
          "clear": "both",
          "display": "table",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Text inverse lead rendering 1`] = `
<div
  style={
    Object {
      "background": "linear-gradient(350deg,  #0d6abe 0%,#a1bee8 50%,#c99eca 100%)",
      "color": "white",
      "padding": "15px 0",
    }
  }
>
  <div
    style={
      Object {
        "boxSizing": "border-box",
        "marginLeft": "auto",
        "marginRight": "auto",
        "maxWidth": "960px",
        "paddingLeft": "15px",
        "paddingRight": "15px",
        "position": "relative",
      }
    }
  >
    <p
      style={
        Object {
          "color": "white",
          "fontFamily": "Tahoma, Geneva, sans-serif",
          "fontSize": 18,
          "lineHeight": 1.5,
          "textShadow": "0px 0px 1px #000",
        }
      }
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec sagittis
           orci, fermentum vestibulum leo. Nulla ut lectus ut quam volutpat laoreet.
           Nulla hendrerit hendrerit libero, id iaculis dui eleifend sed. Nulla
           facilisi. Integer est arcu, molestie sed dui ac, lacinia pulvinar nulla.
           Donec laoreet porta odio. Aliquam dapibus nunc ut dignissim imperdiet.
           Donec quam lacus, vehicula aliquam orci ac, malesuada imperdiet eros.
           Mauris id nisi quis est varius dapibus. Etiam iaculis neque vitae tellus
           tempor, vulputate vehicula elit pulvinar. 
    </p>
    <span
      style={
        Object {
          "clear": "both",
          "display": "table",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Text inverse rendering 1`] = `
<div
  style={
    Object {
      "background": "linear-gradient(350deg,  #0d6abe 0%,#a1bee8 50%,#c99eca 100%)",
      "color": "white",
      "padding": "15px 0",
    }
  }
>
  <div
    style={
      Object {
        "boxSizing": "border-box",
        "marginLeft": "auto",
        "marginRight": "auto",
        "maxWidth": "960px",
        "paddingLeft": "15px",
        "paddingRight": "15px",
        "position": "relative",
      }
    }
  >
    <p
      style={
        Object {
          "color": "white",
          "fontFamily": "Tahoma, Geneva, sans-serif",
          "fontSize": 14,
          "lineHeight": 1.5,
          "textShadow": "0px 0px 1px #000",
        }
      }
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec sagittis
           orci, fermentum vestibulum leo. Nulla ut lectus ut quam volutpat laoreet.
           Nulla hendrerit hendrerit libero, id iaculis dui eleifend sed. Nulla
           facilisi. Integer est arcu, molestie sed dui ac, lacinia pulvinar nulla.
           Donec laoreet porta odio. Aliquam dapibus nunc ut dignissim imperdiet.
           Donec quam lacus, vehicula aliquam orci ac, malesuada imperdiet eros.
           Mauris id nisi quis est varius dapibus. Etiam iaculis neque vitae tellus
           tempor, vulputate vehicula elit pulvinar. 
    </p>
    <span
      style={
        Object {
          "clear": "both",
          "display": "table",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Text lead text 1`] = `
<div
  style={
    Object {
      "padding": "15px 0",
    }
  }
>
  <div
    style={
      Object {
        "boxSizing": "border-box",
        "marginLeft": "auto",
        "marginRight": "auto",
        "maxWidth": "960px",
        "paddingLeft": "15px",
        "paddingRight": "15px",
        "position": "relative",
      }
    }
  >
    <p
      style={
        Object {
          "fontFamily": "Tahoma, Geneva, sans-serif",
          "fontSize": 18,
          "lineHeight": 1.5,
        }
      }
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec sagittis
           orci, fermentum vestibulum leo. Nulla ut lectus ut quam volutpat laoreet.
           Nulla hendrerit hendrerit libero, id iaculis dui eleifend sed. Nulla
           facilisi. Integer est arcu, molestie sed dui ac, lacinia pulvinar nulla.
           Donec laoreet porta odio. Aliquam dapibus nunc ut dignissim imperdiet.
           Donec quam lacus, vehicula aliquam orci ac, malesuada imperdiet eros.
           Mauris id nisi quis est varius dapibus. Etiam iaculis neque vitae tellus
           tempor, vulputate vehicula elit pulvinar. 
    </p>
    <span
      style={
        Object {
          "clear": "both",
          "display": "table",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<article
  className="css-1fqbdip"
>
  <h1
    className="css-nil"
  >
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the
     
    <code
      className="css-mteq83"
    >
      src/stories
    </code>
     
    directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample
     
    <a
      className="css-ca0824"
      onClick={[Function]}
      role="button"
      tabIndex="0"
    >
      stories
    </a>
     
    for a component called
     
    <code
      className="css-mteq83"
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      className="css-mteq83"
    >
      Button
    </code>
     stories located at 
    <code
      className="css-mteq83"
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      className="css-ca0824"
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    className="css-bwdon3"
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the
     
    <code
      className="css-mteq83"
    >
      .storybook/webpack.config.js
    </code>
     
    to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;
